[tool.poetry]
name = "tester"
version = "0.1.0"
description = "Based on the user's request for an API tester feature that echoes back any input text, combined with the information gathered from the searches on API testing best practices and the creation of an echo API with FastAPI, the following detailed project plan is proposed:"
authors = ["AutoGPT <info@agpt.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
bcrypt = "*"
fastapi = "*"
prisma = "*"
pydantic = "*"
uvicorn = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
